; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes_spgist.c_getQuadrant.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes_spgist.c_getQuadrant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @getQuadrant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getQuadrant(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @range_deserialize(i32* %14, i32* %15, i32* %8, i32* %9, i32* %10)
  %17 = load i32*, i32** %5, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @range_deserialize(i32* %17, i32* %18, i32* %11, i32* %12, i32* %13)
  %20 = load i32, i32* %13, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %3
  store i32 5, i32* %4, align 4
  br label %39

23:                                               ; preds = %3
  %24 = load i32*, i32** %5, align 8
  %25 = call i64 @range_cmp_bounds(i32* %24, i32* %11, i32* %8)
  %26 = icmp sge i64 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %23
  %28 = load i32*, i32** %5, align 8
  %29 = call i64 @range_cmp_bounds(i32* %28, i32* %12, i32* %9)
  %30 = icmp sge i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %27
  store i32 1, i32* %4, align 4
  br label %39

32:                                               ; preds = %27
  store i32 2, i32* %4, align 4
  br label %39

33:                                               ; preds = %23
  %34 = load i32*, i32** %5, align 8
  %35 = call i64 @range_cmp_bounds(i32* %34, i32* %12, i32* %9)
  %36 = icmp sge i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %33
  store i32 4, i32* %4, align 4
  br label %39

38:                                               ; preds = %33
  store i32 3, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %37, %32, %31, %22
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @range_deserialize(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @range_cmp_bounds(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
